@@ -30,20 +30,41 @@
             <artifactId>mockito-core</artifactId>
             <version>4.11.0</version>
             <scope>test</scope>
-        </dependency>
-    </dependencies>
+          </dependency>
+         <!-- JavaFX BOM -->
+          <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21</version>
+          </dependency>
+          <dependency>
+           <groupId>org.openjfx</groupId>
+           <artifactId>javafx-fxml</artifactId>
+           <version>21</version>
+          </dependency>
+
+
+        </dependencies>
 
     <build>
         <plugins>
-            <!-- Ejecutar clase principal -->
+            <!--plugin paraa ejecutar -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <mainClass>menu.Main</mainClass>
-                </configuration>
+             <groupId>org.codehaus.mojo</groupId>
+             <artifactId>exec-maven-plugin</artifactId>
+             <version>3.1.0</version>
+             <configuration>
+               <mainClass>menu.Main</mainClass>
+                <commandlineArgs></commandlineArgs>
+               <arguments>
+                 <argument>--module-path</argument>
+                 <argument>${javafx.module.path}</argument>
+                 <argument>--add-modules</argument>
+                 <argument>javafx.controls,javafx.fxml</argument>
+               </arguments>
+              </configuration>
             </plugin>
+
 
             <!-- Compilar con Java 21 -->
             <plugin>
